<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">9Fun</string>
    <string name="InternetIsNotAvailable">Sorry! This application can not be run without Internet!</string>
	<string name="Loading">Loading&#8230;</string>
	<string name="OK">OK</string>
	<string name="mnuChoosePage">Choose Page</string>
	<string name="mnuSettings">Preference</string>
	<string name="mnuHot">Hot Page</string>
	<string name="mnuTrending">Trending Page</string>
	<string name="mnuVote">Vote Page</string>
	<string name="mnuLogin">Login</string>
	<string name="mnuLogout">Logout</string>
	<string name="stSafemode">Safemode</string>
	<string name="safeModeTitle">Safe Mode</string>
	<string name="safeModeSub">Check to turn SafeMode on</string>
	<string name="scrollModeTitle">Scroll Mode</string>
	<string name="scrollModeSub">Scroll to view</string>
	<string name="buttonModeTitle">Use Onscreen Button </string>
	<string name="buttonModeSub">Use the quick button on screen to view</string>
	<string name="NextVersion">We are working hard for this feature, please wait for the next coming version.</string>
	<string name="SupportUs">Thank you for your coming back! Please support us by clicking advertisement!</string>
	<string name="no_img">You need to refresh 9Fun, or this is the newest gag.</string>
	<string name="Logging">Logging in &#8230;</string>
	<string name="gag">9GAG</string>
	<string name="username">Username or Email:</string>
	<string name="password">Password:</string>
	<string name="UsernamePasswordIncorrect">Your Username or Password are not correct. Please try again!</string>
	<string name="Logged">You are logged.</string>
	<string name="Logout">You have logged out</string>
	<string name="LoginToUseVotePage">You can not browse Vote Page without logging in. Please log in!</string>
	<string name="ReturnToHotPage">You can not browse Vote Page without logging in. You are returned to Hot Page!</string>
	<string name="OnlySafeModeOn">Because you did not login, you could only browse 9gag in Safe-mode.</string>
	<string name="ShareWith">Share with</string>
	<string name="DidNotExitRightWay">You did not exit application approriate way. Please restart it!</string>
	<string name="CannotUseLikeButton">Please Login to use Like/UnLike button!</string>
	<string name="Guarantee">We do not save your account/password or use for other means. Its just like your web-login.</string>
</resources>
